...
      right: 20,
      child: Column(
        mainAxisSize: MainAxisSize.min,
        crossAxisAlignment: CrossAxisAlignment.start,
        children: [
          MapSearchBar(
            key: const Key('destination_search_bar'),
            campusLabel: campusLabel,
            controller: controller,
            onSubmitted: onSubmitted,
            suggestions: suggestions,
            onSuggestionSelected: onSuggestionSelected,
            onFocus: onFocus,
...
