...
    link: link,
  );
}

final List<BuildingCore> buildingCores = [
  // SGW
  sgw('LB', 'LB Building', '1400 De Maisonneuve Blvd. W.'),
  sgw('MB', 'John Molson Building', '1450 Guy St.'),
  sgw('HALL', 'Hall Building', '1455 De Maisonneuve Blvd. W.'),
  sgw(
    'EV',
    'Engineering, Computer Science and Visual Arts Integrated Complex',
    '1515 Ste-Catherine St. W.',
...
